--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 
       gtag('config', 'UA-30075056-1');
     </script>
+    <script src="https://kit.fontawesome.com/3ebc46bff0.js" crossorigin="anonymous"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta charset="utf-8">
