Added FTDG to projects

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#cd4848">
     <meta property="og:title" content="Allan Pichardo" data-react-helmet="true"/>
+    <meta property="og:image" content="%PUBLIC_URL%/allan.jpg">
     <meta property="og:site_name" content="Allan Pichardo" />
     <meta property="og:type" content="website" data-react-helmet="true"/>
     <meta property="og:url" content="https://www.allanpichardo.com" data-react-helmet="true"/>
